fixed the terrible issue to find! Yay

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -38,6 +38,7 @@ set(COMPONENTS_HEADERS
 	components/Text.hpp
 	components/RectangularCollider.hpp
 	components/RigidBody.hpp
+	components/ScriptBase.hpp
 	)
 
 
