Got the physics scripting system working. It is horrendous and I won't ever do this way again :) I have to manually create systems to deal with it, which is not at all what I would want

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,7 +53,7 @@ set(SYSTEMS_HEADERS
 	systems/KeyboardInput.hpp
 	systems/AudioSystem.hpp
 	systems/FontRenderer.hpp
-	systems/PlayerPhysics.hpp
+	systems/PhysicsScripting.hpp
 	systems/Collision.hpp
 	systems/Physics.hpp
 	systems/Scripting.hpp
@@ -65,7 +65,7 @@ set(SYSTEMS_SOURCES
 	systems/KeyboardInput.cpp
 	systems/AudioSystem.cpp
 	systems/FontRenderer.cpp
-	systems/PlayerPhysics.cpp
+	systems/PhysicsScripting.cpp
 	systems/Collision.cpp
 	systems/Physics.cpp
 	systems/Scripting.cpp
